--- a/Code/ShipWorks.Tests.Shared/ShipWorks.Tests.Shared.csproj
+++ b/Code/ShipWorks.Tests.Shared/ShipWorks.Tests.Shared.csproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <Compile Include="AssemblyProvider.cs" />
     <Compile Include="AutoMockExtensions.cs" />
+    <Compile Include="Database\DbUtils.cs" />
     <Compile Include="TestCollections.cs" />
     <Compile Include="Database\BulkOrderCreator.cs" />
     <Compile Include="Carriers\FedEx\BuildFedExShipmentEntity.cs" />
