TP#34543: Create BestRateExcludedAccount table. Create/update scripts and llblgen.

--- a/Code/ShipWorks.Data.Model/ShipWorks.Data.Model.csproj
+++ b/Code/ShipWorks.Data.Model/ShipWorks.Data.Model.csproj
@@ -3179,6 +3179,18 @@
     <Compile Include=".\RelationClasses\AmazonSWAProfileRelations.cs">
       <GeneratedBy>LLBLGen Pro</GeneratedBy>
     </Compile>
+    <Compile Include=".\EntityClasses\BestRateExcludedAccountEntity.cs">
+      <GeneratedBy>LLBLGen Pro</GeneratedBy>
+    </Compile>
+    <Compile Include=".\EntityInterfaces\IBestRateExcludedAccountEntity.cs">
+      <GeneratedBy>LLBLGen Pro</GeneratedBy>
+    </Compile>
+    <Compile Include=".\ReadOnlyEntities\ReadOnlyBestRateExcludedAccountEntity.cs">
+      <GeneratedBy>LLBLGen Pro</GeneratedBy>
+    </Compile>
+    <Compile Include=".\RelationClasses\BestRateExcludedAccountRelations.cs">
+      <GeneratedBy>LLBLGen Pro</GeneratedBy>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
