TP#34734: Moved carrier api timing telemetry as close to the actual call to the carrier as possible.

--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -569,6 +569,7 @@
     <Compile Include="Utility\CaseInsensitiveEqualityComparer.cs" />
     <Compile Include="Utility\TelemetricEventType.cs" />
     <Compile Include="Utility\TelemetricResult.cs" />
+    <Compile Include="Utility\TelemetricResultBaseName.cs" />
     <Compile Include="Utility\TimeSpanExtensions.cs" />
     <Compile Include="Utility\VersionUtility.cs" />
     <Compile Include="Utility\WeightUtility.cs" />
