TP #34315: Add new fields to the Generic Schema

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -856,19 +856,29 @@
     <Compile Include="Data\Administration\SqlSchemaUpdaterWrapper.cs" />
     <Compile Include="Data\Administration\UpdateService.cs" />
     <Compile Include="Data\Connection\DatabaseUpgradeTelemetry.cs" />
+    <Compile Include="Filters\Content\Conditions\OrderItems\Custom10Condition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\Custom1Condition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\Custom2Condition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\Custom3Condition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\Custom4Condition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\Custom5Condition.cs" />
+    <Compile Include="Filters\Content\Conditions\OrderItems\Custom6Condition.cs" />
+    <Compile Include="Filters\Content\Conditions\OrderItems\Custom7Condition.cs" />
+    <Compile Include="Filters\Content\Conditions\OrderItems\Custom8Condition.cs" />
+    <Compile Include="Filters\Content\Conditions\OrderItems\Custom9Condition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\MpnCondition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\BrandCondition.cs" />
     <Compile Include="Filters\Content\Conditions\Orders\ChannelOrderIdCondition.cs" />
+    <Compile Include="Filters\Content\Conditions\Orders\Custom10Condition.cs" />
     <Compile Include="Filters\Content\Conditions\Orders\Custom1Condition.cs" />
     <Compile Include="Filters\Content\Conditions\Orders\Custom5Condition.cs" />
     <Compile Include="Filters\Content\Conditions\Orders\Custom3Condition.cs" />
     <Compile Include="Filters\Content\Conditions\Orders\Custom2Condition.cs" />
     <Compile Include="Filters\Content\Conditions\Orders\Custom4Condition.cs" />
+    <Compile Include="Filters\Content\Conditions\Orders\Custom6Condition.cs" />
+    <Compile Include="Filters\Content\Conditions\Orders\Custom7Condition.cs" />
+    <Compile Include="Filters\Content\Conditions\Orders\Custom8Condition.cs" />
+    <Compile Include="Filters\Content\Conditions\Orders\Custom9Condition.cs" />
     <Compile Include="Filters\Content\Conditions\Orders\ShipByDateCondition.cs" />
     <Compile Include="Common\Threading\ProgressFactory.cs" />
     <Compile Include="Data\ProductCatalogTelemetryService.cs" />
