--- a/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
+++ b/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
@@ -325,6 +325,7 @@
     <Compile Include="Data\Administration\VersionSpecificUpdates\V_05_16_01_00_Test.cs" />
     <Compile Include="Data\Connection\ConnectionMonitorExceptionLoggerTest.cs" />
     <Compile Include="Data\Connection\ConnectionMonitorTest.cs" />
+    <Compile Include="Data\EntityUtilityTest.cs" />
     <Compile Include="Editions\EditionManagerTest.cs" />
     <Compile Include="Editions\ShipmentTypeFunctionalityTest.cs" />
     <Compile Include="Email\EmailExceptionTest.cs" />
