--- a/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
+++ b/Code/ShipWorks.Tests/ShipWorks.Tests.csproj
@@ -323,6 +323,7 @@
     <Compile Include="Data\Administration\VersionSpecificUpdates\V_05_13_00_01_Test.cs" />
     <Compile Include="Data\Administration\VersionSpecificUpdates\V_05_13_00_02_Test.cs" />
     <Compile Include="Data\Administration\VersionSpecificUpdates\V_05_16_01_00_Test.cs" />
+    <Compile Include="Data\EntityUtilityTest.cs" />
     <Compile Include="Data\Connection\ConnectionMonitorExceptionLoggerTest.cs" />
     <Compile Include="Data\Connection\ConnectionMonitorTest.cs" />
     <Compile Include="Editions\EditionManagerTest.cs" />
