--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -580,6 +580,12 @@
       <DependentUpon>ActionTaskEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Actions\Tasks\Common\DisabledIndex.cs" />
+    <Compile Include="Actions\Tasks\Common\Editors\CreateLabelTaskEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Actions\Tasks\Common\Editors\CreateLabelTaskEditor.Designer.cs">
+      <DependentUpon>CreateLabelTaskEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Actions\Tasks\Common\IManageDisabledIndexesRepo.cs" />
     <Compile Include="Actions\Tasks\Common\IMissingIndexResolver.cs" />
     <Compile Include="Actions\Tasks\Common\IndexColumn.cs" />
@@ -596,6 +602,7 @@
     <Compile Include="Actions\Tasks\Common\DatabaseMaintenanceTask.cs" />
     <Compile Include="Actions\Tasks\Common\MissingIndex.cs" />
     <Compile Include="Actions\Tasks\Common\MissingIndexResolver.cs" />
+    <Compile Include="Actions\Tasks\Common\CreateLabelTask.cs" />
     <Compile Include="Actions\Tasks\Common\ValidateAddressTask.cs" />
     <Compile Include="Actions\Tasks\Common\WebRequestTask.cs" />
     <Compile Include="Actions\Tasks\Common\Editors\WebRequestTaskEditor.cs">
@@ -1398,6 +1405,9 @@
     <Compile Include="Warehouse\IWarehouseOrderClient.cs" />
     <Compile Include="Warehouse\IWarehouseOrderFactory.cs" />
     <Compile Include="Warehouse\WarehouseOrderFactory.cs" />
+    <EmbeddedResource Include="Actions\Tasks\Common\Editors\CreateLabelTaskEditor.resx">
+      <DependentUpon>CreateLabelTaskEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ApplicationCore\MessageBoxes\ListSeparatorFormatRequiredDlg.resx">
       <DependentUpon>ListSeparatorFormatRequiredDlg.cs</DependentUpon>
       <SubType>Designer</SubType>
