--- a/Code/ShipWorks.Core.Tests.Integration/ShipWorks.Core.Tests.Integration.csproj
+++ b/Code/ShipWorks.Core.Tests.Integration/ShipWorks.Core.Tests.Integration.csproj
@@ -71,6 +71,7 @@
     <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
     <PackageReference Include="System.ComponentModel.Primitives" Version="4.3.0" />
     <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
+    <PackageReference Include="System.Data.HashFunction.CityHash" Version="2.0.0" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
     <PackageReference Include="System.Reactive.Core" Version="3.1.1" />
     <PackageReference Include="System.Reactive.Interfaces" Version="3.1.1" />
