--- a/Code/ShipWorks/packages.config
+++ b/Code/ShipWorks/packages.config
@@ -52,6 +52,9 @@
   <package id="Syncfusion.XlsIO.Base46" version="16.1.0.26" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.3.0" targetFramework="net46" />
+  <package id="System.Data.HashFunction.CityHash" version="2.0.0" targetFramework="net46" />
+  <package id="System.Data.HashFunction.Core" version="2.0.0" targetFramework="net46" />
+  <package id="System.Data.HashFunction.Interfaces" version="2.0.0" targetFramework="net46" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net46" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net46" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net46" />
@@ -64,6 +67,7 @@
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net46" />
   <package id="System.Runtime.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="System.Runtime.InteropServices.Analyzers" version="1.1.0" targetFramework="net46" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Hashing.Algorithms.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="System.Spatial" version="5.8.2" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
