--- a/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
+++ b/Code/ShipWorks.Shipping.Tests/ShipWorks.Shipping.Tests.csproj
@@ -363,7 +363,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rating\ExceptionsRateFootnoteFactoryTests.cs" />
     <Compile Include="ReturnItemRepositoryTest.cs" />
-    <Compile Include="Services\Account\ShippingAccountListProviderTest.cs" />
+    <Compile Include="Carriers\ShippingAccountListProviderTest.cs" />
     <Compile Include="Services\RatesRetrieverServiceTests.cs" />
     <Compile Include="Services\RatesRetrieverTests.cs" />
     <Compile Include="Services\ShipmentFactoryTest.cs" />
@@ -476,7 +476,9 @@
     <Analyzer Include="..\..\packages\System.Security.Cryptography.Hashing.Algorithms.Analyzers.1.1.0\analyzers\dotnet\cs\System.Security.Cryptography.Hashing.Algorithms.CSharp.Analyzers.dll" />
     <Analyzer Include="..\..\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Services\Account\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
