TP#34542: Update product catalog add button to split button

--- a/Code/ShipWorks.Products.UI/packages.config
+++ b/Code/ShipWorks.Products.UI/packages.config
@@ -5,4 +5,5 @@
   <package id="Syncfusion.Licensing" version="16.3.0.29" targetFramework="net46" />
   <package id="Syncfusion.SfInput.WPF" version="16.3.0.29" targetFramework="net46" />
   <package id="Syncfusion.SfShared.WPF" version="16.3.0.29" targetFramework="net46" />
+  <package id="Syncfusion.Shared.WPF46" version="15.4.0.17" targetFramework="net46" />
 </packages>
