TP#34599: Update setting screen - add auto update

--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -1042,11 +1042,11 @@
     <Compile Include="ApplicationCore\Nudges\NudgeOptionDeserializer.cs" />
     <Compile Include="ApplicationCore\Nudges\NudgeType.cs" />
     <Compile Include="ApplicationCore\Settings\ModifiedOrderCustomerUpdateBehavior.cs" />
-    <Compile Include="ApplicationCore\Settings\SettingsPageShortcuts.cs">
+    <Compile Include="ApplicationCore\Settings\SettingsPageScanToShip.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ApplicationCore\Settings\SettingsPageShortcuts.Designer.cs">
-      <DependentUpon>SettingsPageShortcuts.cs</DependentUpon>
+    <Compile Include="ApplicationCore\Settings\SettingsPageScanToShip.Designer.cs">
+      <DependentUpon>SettingsPageScanToShip.cs</DependentUpon>
     </Compile>
     <Compile Include="ApplicationCore\Settings\SingleScanSettings.cs" />
     <Compile Include="ApplicationCore\Security\CipherContext.cs" />
@@ -7173,8 +7173,8 @@
     <EmbeddedResource Include="ApplicationCore\Nudges\NudgeDlg.resx">
       <DependentUpon>NudgeDlg.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ApplicationCore\Settings\SettingsPageShortcuts.resx">
-      <DependentUpon>SettingsPageShortcuts.cs</DependentUpon>
+    <EmbeddedResource Include="ApplicationCore\Settings\SettingsPageScanToShip.resx">
+      <DependentUpon>SettingsPageScanToShip.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ApplicationCore\Settings\PrintResultCleanup\PrintJobCleanupDlg.resx">
       <DependentUpon>PrintJobCleanupDlg.cs</DependentUpon>
