--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -362,6 +362,7 @@
     <Compile Include="ScanToShip\ScanToShipControlHost.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="ScanToShip\ScanToShipTab.cs" />
     <Compile Include="ScanToShip\ScanToShipViewModel.cs" />
     <Compile Include="ShipmentModelPipelines\CreateLabelShortcutPipeline.cs" />
     <Compile Include="OrderLookupModule.cs" />
