TP#35278: Fix unit tests in OrderLookupSingleScanPipeline

--- a/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
+++ b/Code/ShipWorks.OrderLookup/ShipWorks.OrderLookup.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Controls\EmailNotifications\QuantumViewNotifyControl.xaml.cs">
       <DependentUpon>QuantumViewNotifyControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\OrderLookupSearchControl\IOrderLookupSearchViewModel.cs" />
     <Compile Include="Controls\OrderLookup\IMainOrderLookupViewModel.cs" />
     <Compile Include="Controls\Rating\IRatingViewModel.cs" />
     <Compile Include="Controls\Reference\AmazonReferenceControl.xaml.cs">
