--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -282,6 +282,10 @@
     <Compile Include="Platforms\Magento\Warehouse\MagentoStoreDtoFactory.cs" />
     <Compile Include="Platforms\Odbc\Mapping\OdbcStoreRepository.cs" />
     <Compile Include="Platforms\Odbc\Mapping\RefreshingOdbcStore.cs" />
+    <Compile Include="Platforms\Rakuten\DTO\RakutenOrder.cs" />
+    <Compile Include="Platforms\Rakuten\DTO\RakutenOrderItem.cs" />
+    <Compile Include="Platforms\Rakuten\DTO\RakutenShipment.cs" />
+    <Compile Include="Platforms\Rakuten\IRakutenWebClient.cs" />
     <Compile Include="Platforms\Walmart\WalmartWebClientSettings.cs" />
     <Compile Include="Platforms\Walmart\IWalmartWebClientSettings.cs" />
     <Compile Include="Platforms\Walmart\Warehouse\WalmartStore.cs" />
@@ -1026,6 +1030,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Orders\Archive\GetArchiveTriggers.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Platforms\Rakuten\Content\" />
+    <Folder Include="Platforms\Rakuten\OnlineUpdating\" />
+    <Folder Include="Platforms\Rakuten\Warehouse\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
