--- a/nuget.config
+++ b/nuget.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="Interapptive Local" value="\\intfs01\development\nuget" />
+    <add key="Interapptive MyGet" value="https://www.myget.org/F/shipworks/auth/3982e622-5061-4df1-92a3-d178bf28924f/api/v3/index.json" />
     <add key="nuget.org" value="https://nuget.org/api/v2/" />
   </packageSources>
   <disabledPackageSources>
