TP#34801: Update csproj

--- a/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
+++ b/Code/ShipWorks.Stores/ShipWorks.Stores.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" 
+  xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -301,10 +302,6 @@
     <Compile Include="Platforms\Rakuten\IRakutenDownloader.cs" />
     <Compile Include="Platforms\Rakuten\IRakutenWebClient.cs" />
     <Compile Include="Platforms\Rakuten\RakutenDownloader.cs" />
-    <Compile Include="Platforms\Rakuten\Warehouse\RakutenStoreDtoFactory.cs" />
-    <Compile Include="Platforms\Rakuten\Warehouse\RakutenWarehouseItem.cs" />
-    <Compile Include="Platforms\Rakuten\Warehouse\RakutenWarehouseOrder.cs" />
-    <Compile Include="Platforms\Rakuten\Warehouse\RakutenWarehouseOrderFactory.cs" />
     <Compile Include="Platforms\Walmart\WalmartWebClientSettings.cs" />
     <Compile Include="Platforms\Walmart\IWalmartWebClientSettings.cs" />
     <Compile Include="Platforms\Walmart\Warehouse\WalmartStore.cs" />
